[project]
name = "dashbaby"
version = "0.0.1"
description = "Dashboard to summarize the evolution of your babies "
readme = "README.md"
authors = [
    { name = "Gustavo Viera-López", email = "gvieralopez@gmail.com" },
]

dependencies = [
    "pandas",
    "openpyxl",
    "streamlit",
    "altair",
]
requires-python = ">=3.10"

[project.optional-dependencies]
dev = [
    "ruff",
    "mypy",
    "pytest",
    "pre-commit",
    "pytest-cov",
    "pandas-stubs",
    "types-requests"
]

[project.scripts]
dashbaby = "dashbaby.main:main"

[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["dashbaby"]

[tool.ruff]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
    ".env",
]
line-length = 88
indent-width = 4
target-version = "py310"

[tool.ruff.lint]
# Enable Pyflakes (`F`), Isort (`I`), flake8-use-pathlib (`PTH`) and a subset of
# pycodestyle (`E`) codes by default.
select = ["E4", "E7", "E9", "F", "I", "PTH"]
ignore = []
fixable = ["ALL"]
unfixable = []

[tool.ruff.format]
quote-style = "double"                 # Use double quotes for strings.
indent-style = "space"                 # Indent with spaces (like Black).
skip-magic-trailing-comma = false      # Respect magic trailing commas.
docstring-code-format = false
docstring-code-line-length = "dynamic"

[tool.mypy]
python_version = "3.10"
exclude = ["docs"]
mypy_path = "$MYPY_CONFIG_FILE_DIR/dashbaby"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --cov --cov-append --cov-fail-under=80"
testpaths = ["tests", "integration"]
